linuxmuster-cachingserver-satellite (1.0.0-0) lmn72-testing; urgency=low

  * initial upload

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 21 Feb 2023 17:28:00 +0200